--- a/A1/CMakeLists.txt
+++ b/A1/CMakeLists.txt
@@ -4,31 +4,30 @@ project(A1)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
-include_directories(A1)
-include_directories(A1/Build)
-include_directories(A1/Main)
-include_directories(A1/Main/BufferMgr)
-include_directories(A1/Main/BufferMgr/headers)
-include_directories(A1/Main/BufferMgr/source)
-include_directories(A1/Main/BufferTest)
-include_directories(A1/Main/BufferTest/source)
-include_directories(A1/Main/Catalog)
-include_directories(A1/Main/Catalog/headers)
-include_directories(A1/Main/Catalog/source)
-include_directories(A1/Main/Qunit)
-include_directories(A1/Main/Qunit/headers)
+include_directories(Main)
+include_directories(Main/BufferMgr)
+include_directories(Main/BufferMgr/headers)
+include_directories(Main/BufferMgr/source)
+include_directories(Main/BufferTest)
+include_directories(Main/BufferTest/source)
+include_directories(Main/Catalog)
+include_directories(Main/Catalog/headers)
+include_directories(Main/Catalog/source)
+include_directories(Main/Qunit)
+include_directories(Main/Qunit/headers)
 
 add_executable(A1
-        A1/Build/SConstruct
-        A1/Main/BufferMgr/headers/MyDB_BufferManager.h
-        A1/Main/BufferMgr/headers/MyDB_LRU.h
-        A1/Main/BufferMgr/headers/MyDB_Page.h
-        A1/Main/BufferMgr/headers/MyDB_PageHandle.h
-        A1/Main/BufferMgr/source/MyDB_BufferManager.cc
-        A1/Main/BufferMgr/source/MyDB_Page.cpp
-        A1/Main/BufferMgr/source/MyDB_PageHandle.cc
-        A1/Main/BufferTest/source/BufferQUnit.cc
-        A1/Main/Catalog/headers/MyDB_Table.h
-        A1/Main/Catalog/source/MyDB_Table.cc
-        A1/Main/Qunit/headers/QUnit.h
-        A1.pdf)
+        Main/BufferMgr/headers/LRU.h
+        Main/BufferMgr/headers/MyDB_BufferManager.h
+        Main/BufferMgr/headers/MyDB_Page.h
+        Main/BufferMgr/headers/MyDB_PageHandle.h
+        Main/BufferMgr/headers/Node.h
+        Main/BufferMgr/source/LRU.cpp
+        Main/BufferMgr/source/MyDB_BufferManager.cc
+        Main/BufferMgr/source/MyDB_Page.cpp
+        Main/BufferMgr/source/MyDB_PageHandle.cc
+        Main/BufferMgr/source/Node.cpp
+        Main/BufferTest/source/BufferQUnit.cc
+        Main/Catalog/headers/MyDB_Table.h
+        Main/Catalog/source/MyDB_Table.cc
+        Main/Qunit/headers/QUnit.h)
