--- a/A1/CMakeLists.txt
+++ b/A1/CMakeLists.txt
@@ -4,12 +4,14 @@ project(A1)
 set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
+include_directories(Build)
+include_directories(Build/bin)
+include_directories(cmake-build-debug)
 include_directories(Main)
 include_directories(Main/BufferMgr)
 include_directories(Main/BufferMgr/headers)
 include_directories(Main/BufferMgr/source)
 include_directories(Main/BufferTest)
-include_directories(Main/BufferTest/source)
 include_directories(Main/Catalog)
 include_directories(Main/Catalog/headers)
 include_directories(Main/Catalog/source)
@@ -17,6 +19,12 @@ include_directories(Main/Qunit)
 include_directories(Main/Qunit/headers)
 
 add_executable(A1
+        Build/SConstruct
+        cmake-build-debug/A1
+        cmake-build-debug/A1.cbp
+        cmake-build-debug/cmake_install.cmake
+        cmake-build-debug/CMakeCache.txt
+        cmake-build-debug/Makefile
         Main/BufferMgr/headers/LRU.h
         Main/BufferMgr/headers/MyDB_BufferManager.h
         Main/BufferMgr/headers/MyDB_Page.h
