--- a/A2/CMakeLists.txt
+++ b/A2/CMakeLists.txt
@@ -5,7 +5,6 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(.)
 include_directories(Build)
-include_directories(Build/bin)
 include_directories(cmake-build-debug)
 include_directories(Main)
 include_directories(Main/BufferMgr)
@@ -31,11 +30,12 @@ add_executable(A2
         Build/SConstruct
         Build/supplier.tbl
         cmake-build-debug/A2.cbp
+        cmake-build-debug/Ass2.cbp
         cmake-build-debug/cmake_install.cmake
         cmake-build-debug/CMakeCache.txt
         cmake-build-debug/Makefile
+        cmake-build-debug/supplier.tbl
         Main/BufferMgr/headers/CheckLRU.h
-        Main/BufferMgr/headers/it.cc
         Main/BufferMgr/headers/MyDB_BufferManager.h
         Main/BufferMgr/headers/MyDB_Page.h
         Main/BufferMgr/headers/MyDB_PageHandle.h
@@ -43,7 +43,6 @@ add_executable(A2
         Main/BufferMgr/headers/TableCompare.h
         Main/BufferMgr/source/MyDB_BufferManager.cc
         Main/BufferMgr/source/MyDB_Page.cc
-        Main/BufferTest/source/BufferQUnit.cc
         Main/Catalog/headers/MyDB_AttType.h
         Main/Catalog/headers/MyDB_Catalog.h
         Main/Catalog/headers/MyDB_PageType.h
